--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
+    "react-barcode-scanner": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "use-scan-detection": "^0.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
